adding content in topics

--- a/redes/css/style.css
+++ b/redes/css/style.css
@@ -1,9 +1,3 @@
-body {
-  margin: 0;
-  background: #efefef;
-  font-family: 'Lato', sans-serif;
-}
-
 video {
   position: fixed;
   left: 50%;
@@ -16,6 +10,12 @@ video {
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
   transition: 1s opacity;
+}
+
+body {
+  margin: 0;
+  background: #efefef;
+  font-family: 'Lato', sans-serif;
 }
 
 .title {
@@ -43,7 +43,6 @@ video {
 
 main {
   display: flex;
-
 }
 
 .thread {
@@ -52,15 +51,49 @@ main {
   margin-top: 70px;
   padding: 50px;
   border-radius: 4px;
-
   /* o código abaixo transforma a div em uma div 'flexbox' */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
+.thread h2 {
+  font-size: 21px;
+}
 a {
   text-decoration: none;
   color: #333;
+}
+
+
+/* topic style */
+.topicheader {
+  display:flex;
+  justify-content:center;
+  flex-direction:column;
+  align-items:center;
+}
+
+.topicheader h1 {
+  color: #333;
+}
+
+.topicmain {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction:column;
+}
+
+.topicmain p {
+  width: 70%;
+}
+
+.topicmain img {
+  width:50%;
+}
+.topicmain h2 {
+  color:#333;
+  padding:30px;
+  font-size:30px;
 }
