--- a/redes/css/style.css
+++ b/redes/css/style.css
@@ -89,7 +89,7 @@ a {
 }
 
 .topicheader h1 {
-  color: #333;
+  color:#333;
 }
 
 .topicmain {
@@ -100,12 +100,14 @@ a {
 }
 
 .topicmain p {
-  width: 70%;
+  width:70%;
 }
 
 .topicmain img {
   width:50%;
+  border-radius:40px;
 }
+
 .topicmain h2 {
   color:#333;
   padding:30px;
